# backend/image_codex/routers/compositions.py
@@ -1,47 +1,37 @@
 import base64
 from io import BytesIO
-from typing import List, Tuple
 
 import requests
 from fastapi import APIRouter
+from fastapi.param_functions import Query
 from image_codex.models.api import ApiFile
+from image_codex.models.compositions import Composition
+from image_codex.utils.pil import get_pil_format
 from PIL import Image
-from pydantic.main import BaseModel
 
-router = APIRouter()
-root_path = '/compositions'
-
-
-class ComposedImage(BaseModel):
-    id: str
-    url: str
-    x: int
-    y: int
-    width: int
-    height: int
+router = APIRouter(
+    prefix='/compositions',
+    tags=['compositions']
+)
 
 
-class RequestComposition(BaseModel):
-    name: str
-    width: int
-    height: int
-    background_color: Tuple[int, ...] = (255, 255, 255)
-    images: List[ComposedImage]
-
-
-@router.post(root_path, response_model=ApiFile)
-async def create_composition(request: RequestComposition) -> ApiFile:
-    composition = Image.new('RGB',
-                            (request.width, request.height),
-                            request.background_color)
-    for image in request.images:
+@router.post('/', response_model=ApiFile)
+async def create_composition(composition: Composition,
+                             mimetype: str = Query('application/pdf')) -> ApiFile:
+    """
+    Create an image composition and return it in the given type
+    """
+    composedImage = Image.new('RGB',
+                              (composition.width, composition.height),
+                              composition.background_color)
+    for image in composition.images:
         with BytesIO(requests.get(image.url).content) as file:
             with Image.open(file) as img:
                 img.thumbnail((image.width, image.height), Image.ANTIALIAS)
-                composition.paste(img, (image.x, image.y))
+                composedImage.paste(img, (image.x, image.y))
     with BytesIO() as file:
-        composition.save(file, format='PDF')
+        composedImage.save(file, format=get_pil_format(mimetype))
         data = base64.b64encode(file.getvalue())
-    return ApiFile(name=request.name,
-                   type='application/pdf',
+    return ApiFile(name=composition.name,
+                   type=mimetype,
                    base64=data)
